stylus-proc/tests/fail/derive_abi_type/missing_sol_macro.stderr
error[E0277]: the trait bound `MyStruct: SolType` is not satisfied
 --> tests/fail/derive_abi_type/missing_sol_macro.rs:9:10
  |
9 | #[derive(AbiType)]
  |          ^^^^^^^ the trait `SolType` is not implemented for `MyStruct`
  |
  = help: the following other types implement trait `SolType`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
note: required by a bound in `stylus_sdk::abi::AbiType::SolType`
 --> $WORKSPACE/stylus-sdk/src/abi/mod.rs
  |
  |     type SolType: SolType<RustType = Self>;
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AbiType::SolType`
  = note: this error originates in the derive macro `AbiType` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `StorageBool: AbiType` is not satisfied
  --> tests/fail/derive_abi_type/missing_sol_macro.rs:11:10
   |
11 |     bar: StorageBool,
   |          ^^^^^^^^^^^ the trait `AbiType` is not implemented for `StorageBool`
   |
   = help: the following other types implement trait `AbiType`:
             ()
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
             (B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
             (C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
             (D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
             (E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
             (F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
             (G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
           and $N others
